    - ResourceLocator.add_resources_by_modname will now also load tags
    - added new blocks: brick slab, stained glass, carpets, sandstone
    - rendering support for "uv" coordinates
    - TextureAtlas will now resize automatically to new size if needed
    - added grass <-> dirt convert
    - log contains now some os-specific information
    fixed bugs:
        - exceptions when trying to load recipes from an namespace with sub-recipe-folders
        - models in sub-directories where not loadable
        - fixed random updates
        - block inventories were not closed when block holding the inventory was removed
        - some textures were blurry


changelog of rendering-branch version 1
    - changed the way how block faces are stored
    - removed custom block renderers for the moment
    - crashes on mod bus do not crash the game any more
    - blocks are now rendered face-by-face instead of all faces at ones


changelog of snapshot 20w05a [released on 01.02.2020]
    - todo: complete this changelog
    based on: cleanup-branch version 1 [merged on 01.02.2020 onto master]:
    - added an file called "events.list" storing every event ever called
    - added loading event called "stage:block:block_config" called to register block config entries
    - split up ICustomBlockRenderer into IStaticCustomBlockRenderer and IObjectedCustomBlockRenderer
    - add new events: "command:clear:start", "command:clear:end", "command:give:start", "command:give:end",
                      "command:help:generate_pages", "command:parse_bridge:setup", "command:execute_command",
                      "command:registryinfo:parse", "chat:text_enter", "inventory:show", "modloader:mod_found",
                      "itemhandler:build:atlases:save", "itemhandler:build:atlases:load", "state:switch:pre",
                      "state:switch:post", "modelhandler:searched", "worldgen:chunk:finished", "player:die",