@@ -30,7 +30,7 @@ SPEED_DICT = {
     0: [WALKING_SPEED, SPRINTING_SPEED],
     1: [WALKING_SPEED, SPRINTING_SPEED, FLYING_SPEED, FLYING_SPRINTING_SPEED],
     2: [WALKING_SPEED, SPRINTING_SPEED],
-    3: [None, None, GAMEMODE_3_SPEED, GAMEMODE_3_SPRINTING_SPEED]
+    3: [0, 0, GAMEMODE_3_SPEED, GAMEMODE_3_SPRINTING_SPEED]
 }
 
 GRAVITY = 20.0
@@ -62,4 +62,6 @@ RANDOM_TICK_SPEED = 3
 RANDOM_TICK_RANGE = 2
 
 USE_MISSING_TEXTURES_ON_MISS_TEXTURE = True
+
+CPU_USAGE_REFRESH_TIME = 0.8
 
