@@ -11,6 +11,7 @@ import event.EventInfo
 import globals as G
 import pyglet
 import util.opengl
+import psutil
 
 
 class StateModLoading(State.State):
@@ -24,7 +25,9 @@ class StateModLoading(State.State):
     def get_parts(self) -> list:
         return [UIPartProgressBar.UIPartProgressBar((10, 10), (20, 20), status=1, color=(1., 0., 0.)),  # stage
                 UIPartProgressBar.UIPartProgressBar((10, 40), (20, 20), status=1, color=(0., 0., 1.)),  # mod
-                UIPartProgressBar.UIPartProgressBar((10, 70), (20, 20), status=1, color=(0., 1., 0.))]  # item
+                UIPartProgressBar.UIPartProgressBar((10, 70), (20, 20), status=1, color=(0., 1., 0.)),  # item
+                UIPartProgressBar.UIPartProgressBar((10, 10), (20, 20), status=1,  # memory usage
+                                                    color=(1., 0., 0.), progress_items=psutil.virtual_memory().total)]
 
     def bind_to_eventbus(self):
         self.eventbus.subscribe("user:window:resize", self.on_resize)
@@ -39,6 +42,13 @@ class StateModLoading(State.State):
         pyglet.gl.glClearColor(255, 255, 255, 255)
         for part in self.parts:
             part.bboxsize = (G.window.get_size()[0]-40, 20)
+        self.parts[3].position = (10, G.window.get_size()[1]-40)
+        process = psutil.Process()
+        with process.oneshot():
+            self.parts[3].progress = process.memory_info().rss
+        self.parts[3].text = "Memory usage: {}MB/{}MB ({}%)".format(
+            self.parts[3].progress//2 ** 20, self.parts[3].progress_max//2 ** 20,
+            round(self.parts[3].progress/self.parts[3].progress_max*10000)/100)
 
     def on_update(self, dt):
         G.modloader.process()
