@@ -1,0 +1,7 @@
+maybe helpful:
+    https://docs.python.org/3/library/multiprocessing.shared_memory.html with
+    https://docs.python.org/3/library/concurrent.futures.html#module-concurrent.futures
+
+    or https://docs.python.org/3/library/asyncio.html
+
+    and https://docs.python.org/3/library/socket.htmlü+
